--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,43 @@
 <html>
     <head>
         <title>My Webpage!</title>
+        <style>
+            h1 {
+                color:blue;
+            }
+        </style>
     </head>
     <body>
-        Hello World! 
+        Hello World!
+        An ordered list:
+        <ol>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ol>
+        An un-ordered list:
+        <ul>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ol>
+        <img src="foto.jpg" width="50%">
+        <h1 style="color:blue;text-align:center; "> Presidentes </h1>
+        <table>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Years in office</th>
+            </tr>
+            <tr>
+                <td>Jsime</td>
+                <td>Roldos</td>
+                <td>1982</td>
+            </tr>
+        </table>
+        <form>
+            <input type="text" placeholder="Fullname" name="name">
+            <button>Submit!</button>
+        </form>
     </body>
 </html>
