changes for class

--- a/prueba.html
+++ b/prueba.html
@@ -10,6 +10,9 @@
 
     </head>
     <body>
+
+        <h1>Primera gran linea</h1>
+        <h2>Linea mas pequeña</h2>
         Hello World!
         <a href="hello.html">Click Here!</a>
         An ordered list:
@@ -19,8 +22,21 @@
             <li>Third Item</li>
         </ol>
         <form>
+            <div>
             <input type="text" placeholder="Fullname" name="name">
+            <input type="password" placeholder="Password" name="password">
             <button>Submit!</button>
+            </div>
+
+            <div>
+                Color Favorito? 
+            <input name="color" type="radio" placeholder="Rojo" >
+            <input name="color" type="radio" placeholder="Verde" >
+            <input name="color" type="radio" placeholder="Azul" >
+            <input name="color" type="radio" placeholder="Otro" >
+            <button>Submit!</button>
+            </div>
+
         </form>
     </body>
 </html>
